--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,34 @@
 body {
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Montserrat', 'Work Sans', sans-serif;
 }
 
+.hero-titleB {
+font-size: 35px;
+  font-weight: 800 !important; /* Extra bold (Montserrat supports 800) */
+  font-family: 'Montserrat', sans-serif; /* Ensure Montserrat is loaded */
+}
 
+.hoverStyle{
+  background-color: #0385d2;
+  color: white;
+  border-color:#0385d2;
+  font-weight: 600;
+}
+
+.hoverStyle:hover {
+  background-color: #059cf5; 
+  color: white;
+}
+
+.hoverStyleVari{
+  color: #0385d2;
+  border-color:#0385d2;
+  font-weight: 600;
+}
+.hoverStyleVari:hover {
+  background-color: #059cf5; 
+  color: white;
+}
 /* Custom styles for the header */
 .navbar {
 padding: 0.5rem 0;
@@ -65,7 +91,7 @@ font-weight: bold;
 
 
 .bg-purple {
-  background-color: #000000; /* Color púrpura */
+  background-color: #000000; 
 }
 
 .text-white {
